# CS285_spring2026

final_project_offline_online/problem/: .gitignore  README.md  pyproject.toml  requirements.txt
final_project_offline_online/problem/src/agents/: __init__.py  dsrl_agent.py  fql_agent.py  ifql_agent.py  qsm_agent.py  sacbc_agent.py
final_project_offline_online/problem/src/configs/: __init__.py  dsrl_config.py  fql_config.py  ifql_config.py  qsm_config.py  sacbc_config.py
final_project_offline_online/problem/src/infrastructure/: log_utils.py  pytorch_util.py
final_project_offline_online/problem/src/networks/: rl_networks.py
final_project_offline_online/problem/src/scripts/: modal_run.py  run.py  train_offline_online.py
hw1/src/hw1_imitation/: model.py  train.py
hw2/src/agents/: pg_agent.py
hw2/src/networks/: critics.py  policies.py
hw3/src/scripts/: modal_run_dqn.py  modal_run_sac.py
hw4/: .gitignore  README.md  pyproject.toml
hw4/hw4/: config.py  eval.py  train.py
hw4/hw4/models/: load.py  logprobs.py
hw4/hw4/rl/: base.py  grpo.py  reinforce.py
hw4/hw4/rollout/: hf_sampler.py  rollout_buffer.py
hw4/hw4/tasks/: format_copy.py  math_hard.py
hw4/scripts/: modal_train.py
hw5/: README.md  pyproject.toml
hw5/src/agents/: __init__.py  fql_agent.py  iql_agent.py  sacbc_agent.py
hw5/src/configs/: __init__.py  fql_config.py  iql_config.py
hw5/src/infrastructure/: log_utils.py  pytorch_util.py  replay_buffer.py  utils.py
hw5/src/networks/: rl_networks.py
hw5/src/scripts/: modal_run.py  run.py  run_njobs.py
